[package]
name = "powerio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = 'Compiler infrastructure for power systems: parse, convert, validate, and lower grid models'
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/powerio"
keywords = ["matpower", "parser", "lossless"]
categories = ["science", "parsing"]

# powerio has no features, so this just pins the docs.rs build to the same flags
# the Pages build uses; the block is here so a future `cargo publish` renders
# identically on docs.rs.
[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "2"
num-complex.workspace = true
# Byte-slice float parsing for numeric matrix rows, avoiding UTF-8 allocation.
lexical-core = "1"
# A power network is a graph; connectivity/radial diagnostics live on Network.
petgraph = "0.8"
serde.workspace = true
# Format converters (PowerModels / egret JSON) serialize the typed model.
serde_json.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "parse"
harness = false

[lints]
workspace = true
